some overflow fixes

--- a/SS.less
+++ b/SS.less
@@ -175,9 +175,9 @@ img{
   text-align: center;
   overflow: hidden;
   padding-bottom: 8px;
-  height: 20px;
+  height: 31px;
   display: block;
-
+  padding: 0 5px;
 
 }
 .left{
